--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/FH8Vn5d/1-156-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IONE</title>
+  <!-- Aos animation css here  -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -17,6 +19,12 @@
     (function () {
       emailjs.init("kM2ZZ-I4QiQPp3W81");
     })();
+  </script>
+
+  <!-- Aos animation js file here -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
   </script>
 </body>
 
